<resources>
    <string name="app_name">NewsApp</string>
    <string name="api_key">6f170bf44a154b72b19727b63f239d7a</string>
    <string name="select_category">Select Category</string>
    <string name="get_localization_button">Get Localization</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sidebar_open">open sidebar</string>
    <string name="sidebar_close">close sidebar</string>
    <string name="google_text">Google</string>
    <string name="youtube_text">Youtube</string>
    <string name="gmail_text">Gmail</string>
    <string name="search">Search</string>
    <string name="log_in">Log in</string>
    <string name="log_in_user">Log in User</string>
    <string name="enter_user_id">Enter UserID</string>
    <string name="enter_pass">Enter Password</string>
    <string name="enter_name">Enter Name</string>
    <string name="submit">Submit</string>
    <string name="add">Add</string>
    <string name="dont_acc">Don\'t have an account? Click the button below to sign up!</string>
    <string name="create_acc">Create an account</string>
    <string name="register_user">Register User</string>
    <string name="confirm_pass">Confirm Password</string>
    <string name="register">Register</string>
    <string name="i_already_have">I already have account</string>
    <string name="sample">Sample</string>
    <string name="shake_message">Screen was shaken</string>
    <string name="input">Fill all the fields</string>
    <string name="credentials">Invalid credentials</string>
    <string name="registered">Registred</string>


</resources>